--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.16.5",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
     "husky": "^9.1.7",
