--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,35 +105,12 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
-      # Instalar dependências do sistema necessárias para navegadores
-      - name: Install System Dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libgtk-4-1 \
-            libgraphene-1.0-0 \
-            libwoff1 \
-            libvpx7 \
-            libevent-2.1-7 \
-            libopus0 \
-            libgstreamer1.0-0 \
-            libgstreamer-plugins-base1.0-0 \
-            libgstreamer-plugins-bad1.0-0 \
-            libgstreamer-gl1.0-0 \
-            libgstreamer-plugins-base1.0-0 \
-            libgstreamer-plugins-bad1.0-0 \
-            libflite1 \
-            libavif13 \
-            libharfbuzz-icu0 \
-            libsecret-1-0 \
-            libhyphen0 \
-            libmanette-0.2-0 \
-            libgles2-mesa \
-            libx264-163
+      # Instalar navegadores do Playwright (inclui todas as dependências do sistema)
+      - name: Install Playwright Browsers
+        uses: microsoft/playwright-github-action@v1
+        with:
+          browsers: chromium
 
-      - run: pnpm install --frozen-lockfile --prefer-offline
-      - run: pnpm nuxt prepare
-      - run: pnpm test:e2e:install
       - run: pnpm build
       - name: Start Preview Server
         run: |
