--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,11 +105,8 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
-      # Instalar navegadores do Playwright (inclui todas as dependências do sistema)
       - name: Install Playwright Browsers
-        uses: microsoft/playwright-github-action@v1
-        with:
-          browsers: chromium
+        run: npx playwright install --with-deps chromium
 
       - run: pnpm build
       - name: Start Preview Server
