chore: add pnpm install and nuxt prepare steps to ci workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,9 @@ jobs:
           node-version: 22
           cache: 'pnpm'
 
+      - run: pnpm install --frozen-lockfile --prefer-offline
+      - run: pnpm nuxt prepare
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps chromium
 
