--- a/amplify.yml
+++ b/amplify.yml
@@ -13,29 +13,28 @@ applications:
             - pnpm run build
         postBuild:
           commands:
-            # Criar diretório para o compute
+            # Configurar variáveis de ambiente para o compute
             - mkdir -p .amplify-hosting/compute/default
-            # Configurar variáveis de ambiente
             - echo "NUXT_PUBLIC_APP_ENV=$NUXT_PUBLIC_APP_ENV" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_PUBLIC_BASE_URL=$NUXT_PUBLIC_BASE_URL" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_OPENAI_API_KEY=$NUXT_OPENAI_API_KEY" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_ACCOUNT_ID=$NUXT_CLOUDFLARE_ACCOUNT_ID" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_NAMESPACE_ID=$NUXT_CLOUDFLARE_NAMESPACE_ID" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_API_TOKEN=$NUXT_CLOUDFLARE_API_TOKEN" >> .amplify-hosting/compute/default/.env
-            # Copiar arquivos do build para o diretório do compute
+            # Copiar arquivos necessários para o compute
             - cp -r .output/server .amplify-hosting/compute/default/
             - cp -r .output/public .amplify-hosting/compute/default/
             - cp package.json .amplify-hosting/compute/default/
             - cp pnpm-lock.yaml .amplify-hosting/compute/default/
-            # Criar arquivo de entrada para o compute
+            # Criar entry point para o compute
             - echo 'import { createServer } from "./server/index.mjs"; createServer();' > .amplify-hosting/compute/default/index.js
-            # Verificar estrutura de arquivos
+            # Gerar deploy-manifest.json necessário para o Amplify
+            - echo '{"version":"1","framework":"nuxt","computeResources":[{"name":"default","runtime":"nodejs18.x","entrypoint":"index.js"}]}' > .amplify-hosting/deploy-manifest.json
+            # Verificar estrutura final
+            - ls -la .amplify-hosting/
             - ls -la .amplify-hosting/compute/default/
-            - ls -la .amplify-hosting/compute/default/public/
-            # Garante que o index.html esteja no lugar correto
-            - cp .output/public/index.html .amplify-hosting/compute/default/
       artifacts:
-        baseDirectory: .amplify-hosting/compute/default
+        baseDirectory: .amplify-hosting
         files:
           - '**/*'
       cache:
