--- a/amplify.yml
+++ b/amplify.yml
@@ -13,7 +13,6 @@ applications:
             - pnpm run build
         postBuild:
           commands:
-            # Configurar variáveis de ambiente para o compute
             - mkdir -p .amplify-hosting/compute/default
             - echo "NUXT_PUBLIC_APP_ENV=$NUXT_PUBLIC_APP_ENV" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_PUBLIC_BASE_URL=$NUXT_PUBLIC_BASE_URL" >> .amplify-hosting/compute/default/.env
@@ -21,20 +20,8 @@ applications:
             - echo "NUXT_CLOUDFLARE_ACCOUNT_ID=$NUXT_CLOUDFLARE_ACCOUNT_ID" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_NAMESPACE_ID=$NUXT_CLOUDFLARE_NAMESPACE_ID" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_API_TOKEN=$NUXT_CLOUDFLARE_API_TOKEN" >> .amplify-hosting/compute/default/.env
-            # Copiar arquivos necessários para o compute
-            - cp -r .output/server .amplify-hosting/compute/default/
-            - cp -r .output/public .amplify-hosting/compute/default/
-            - cp package.json .amplify-hosting/compute/default/
-            - cp pnpm-lock.yaml .amplify-hosting/compute/default/
-            # Criar entry point para o compute
-            - echo 'import { createServer } from "./server/index.mjs"; createServer();' > .amplify-hosting/compute/default/index.js
-            # Gerar deploy-manifest.json necessário para o Amplify
-            - echo '{"version":"1","framework":"nuxt","computeResources":[{"name":"default","runtime":"nodejs18.x","entrypoint":"index.js"}]}' > .amplify-hosting/deploy-manifest.json
-            # Verificar estrutura final
-            - ls -la .amplify-hosting/
-            - ls -la .amplify-hosting/compute/default/
       artifacts:
-        baseDirectory: .amplify-hosting
+        baseDirectory: .output/public
         files:
           - '**/*'
       cache:
