build(amplify): change base directory for artifacts from .output/public to .output/server

--- a/amplify.yml
+++ b/amplify.yml
@@ -21,7 +21,7 @@ applications:
             - echo "NUXT_CLOUDFLARE_NAMESPACE_ID=$NUXT_CLOUDFLARE_NAMESPACE_ID" >> .amplify-hosting/compute/default/.env
             - echo "NUXT_CLOUDFLARE_API_TOKEN=$NUXT_CLOUDFLARE_API_TOKEN" >> .amplify-hosting/compute/default/.env
       artifacts:
-        baseDirectory: .output/public
+        baseDirectory: .output/server
         files:
           - '**/*'
       cache:
