chore: update .env.sample with production configuration and add new environment variables

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,20 @@
+## PROJECT CONFIGURATION
+NUXT_PUBLIC_APP_ENV="production"
+NUXT_PUBLIC_BASE_UR="/api"
+
+## OPENAI
 NUXT_OPENAI_API_KEY=""
-NUXT_PUBLIC_APP_ENV="development"
-NUXT_PUBLIC_BASE_UR=""
+## CLOUDFLARE
+NUXT_CLOUDFLARE_ACCOUNT_ID=
+NUXT_CLOUDFLARE_NAMESPACE_ID=
+NUXT_CLOUDFLARE_API_TOKEN=
+
+## SUPABASE
+NUXT_DATABASE_NAME=
+NUXT_DATABASE_PASSWORD=
+
+# Connect to Supabase via connection pooling
+NUXT_DATABASE_URL=
+
+# Direct connection to the database. Used for migrations
+NUXT_DIRECT_URL=
