chore: update package.json and pnpm-lock.yaml to add prisma commands and dependencies, and refactor chat and project repositories to use prisma for data management

--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     "test:e2e:codegen": "playwright codegen",
     "test:e2e:ci": "playwright test --config=playwright.config.ci.ts",
     "prepare": "husky",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "prisma:migrate": "npx prisma migrate dev",
+    "prisma:migrate:reset": "npx prisma migrate reset"
+  },
+  "prisma": {
+    "seed": "pnpm dlx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "1.2.0",
@@ -47,10 +52,12 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^3.3.3",
     "@nuxtjs/mdc": "^0.17.3",
+    "@prisma/client": "6.9.0",
     "ai": "4.1.51",
     "eslint": "^9.31.0",
     "nuxt": "^4.0.3",
     "ollama-ai-provider": "1.2.0",
+    "prisma": "6.9.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
@@ -71,6 +78,7 @@
     "jsdom": "^26.1.0",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
+    "tsx": "^4.20.5",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.6",
     "wait-on": "^8.0.4"
