feat(auth): implement github authentication and user management

--- a/.env.sample
+++ b/.env.sample
@@ -8,13 +8,7 @@ NUXT_OPENAI_API_KEY=""
 NUXT_CLOUDFLARE_ACCOUNT_ID=
 NUXT_CLOUDFLARE_NAMESPACE_ID=
 NUXT_CLOUDFLARE_API_TOKEN=
-
-## SUPABASE
-NUXT_DATABASE_NAME=
-NUXT_DATABASE_PASSWORD=
-
-# Connect to Supabase via connection pooling
-NUXT_DATABASE_URL=
-
-# Direct connection to the database. Used for migrations
-NUXT_DIRECT_URL=
+DATABASE_URL=
+DIRECT_URL=
+NUXT_OAUTH_GITHUB_CLIENT_ID=
+NUXT_OAUTH_GITHUB_CLIENT_SECRET=
