--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ai": "4.3.19",
     "eslint": "^9.34.0",
     "nuxt": "^4.0.3",
+    "nuxt-auth-utils": "0.5.23",
     "ollama-ai-provider": "1.2.0",
     "prisma": "6.9.0",
     "uuid": "^11.1.0",
